# renderer-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
docs/: Doxyfile
src/: ApplicationWindow.cpp  ApplicationWindow.hpp  Buffer.hpp  Model.cpp  Model.hpp  config.h  main.cpp  texture.cpp  texture.hpp  util.cpp  util.hpp
